hphp/hack/test/typecheck/constraints/nullary_constructor_constraint.php.exp
File "nullary_constructor_constraint.php", line 15, characters 3-20:
Invalid assignment (Typing[4323])
  File "nullary_constructor_constraint.php", line 10, characters 9-9:
  `T` is a constrained type parameter
  File "nullary_constructor_constraint.php", line 10, characters 14-14:
  This type constraint is violated
  File "nullary_constructor_constraint.php", line 10, characters 14-14:
  Expected `B`
  File "nullary_constructor_constraint.php", line 15, characters 18-18:
  But got `A`
